# megaraptor-mcp

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-test-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: test-lab.sh
src/megaraptor_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: __init__.py  conftest.py  docker-compose.test.yml  test_config.py
tests/fixtures/: .gitignore  README.md  __init__.py
tests/integration/: __init__.py  test_agent_deployment.py  test_dfir_tools.py  test_docker_deployment.py  test_docker_deployment_e2e.py  test_error_handling_clients_artifacts.py  test_error_handling_comprehensive.py  test_investigation_workflow_e2e.py  test_os_artifacts_linux.py  test_os_artifacts_windows.py  test_output_quality.py  test_smoke_artifacts.py  test_smoke_connectivity.py  test_smoke_mcp_tools.py  test_smoke_resources.py  test_smoke_vql.py
tests/mocks/: __init__.py  mock_velociraptor.py
tests/unit/: __init__.py  test_certificate_manager.py  test_config.py  test_credential_store.py  test_error_handling.py  test_profiles.py
(+97 files in other folders)
